force-app/main/default/objects/Integration_Message__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>Integration_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>