force-app/main/default/objects/Integration_Message__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>Integration_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>