force-app/main/default/objects/Integration_Message__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>Integration_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>