force-app/main/default/objects/Integration_Message__c/fields/Downstream_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Downstream_Reference_ID__c</fullName>
    <label>Downstream Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>