force-app/main/default/objects/Integration_Message__c/fields/Integration_Message_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message_Name__c</fullName>
    <displayFormat>IM - {000000}</displayFormat>
    <label>Integration Message Name</label>
    <type>AutoNumber</type>
</CustomField>