force-app/main/default/objects/Integration_Message__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <description>Values - OODa Check, Validate Promo Code, Account Create, Case Create</description>
    <label>Interface Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>