force-app/main/default/objects/Integration_Message__c/fields/Interface_Priority__c.field-meta.xml
<CustomField>
    <fullName>Interface_Priority__c</fullName>
    <label>Interface Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>