force-app/main/default/objects/Integration_Message__c/fields/Login_Request_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Login_Request_Envelope__c</fullName>
    <label>Login Request Envelope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>