force-app/main/default/objects/Integration_Message__c/fields/Login_Response_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Login_Response_Envelope__c</fullName>
    <label>Login Response Envelope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>