force-app/main/default/objects/Integration_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration</fullName>
                <default>true</default>
                <label>Integration</label>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>