force-app/main/default/objects/Integration_Message__c/fields/Number_of_Retrials__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Retrials__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Retrials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>