force-app/main/default/objects/Integration_Message__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Document__c</fullName>
                <label>Document</label>
            </value>
            <value>
                <fullName>Product2</fullName>
                <label>Product</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Address__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>