force-app/main/default/objects/Integration_Message__c/fields/Parent_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template_Name__c</fullName>
    <label>Parent Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>