force-app/main/default/objects/Integration_Message__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Integration Messages</relationshipLabel>
    <relationshipName>Integration_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>