force-app/main/default/objects/Integration_Message__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <formula>IF( !ISBLANK(Account__c), Account__c,
IF( !ISBLANK( Contact__c ), Contact__c,
IF( !ISBLANK(Address__c), Address__c,
IF( !ISBLANK(Product2__c), Product2__c,
IF( !ISBLANK(Contract__c), Contract__c, &apos;&apos;)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Id</label>
    <type>Text</type>
</CustomField>