force-app/main/default/objects/Integration_Message__c/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <formula>IF( !ISBLANK(Account__c), &apos;Account: &apos; + Account__r.Name, 
  IF( !ISBLANK( Contact__c ), &apos;Contact: &apos; + Contact__r.FirstName + &apos; &apos; + Contact__r.LastName, 
     IF( !ISBLANK(Address__c), &apos;Address: &apos; + Address__r.Name, 
        IF( !ISBLANK(Product2__c), &apos;Product: &apos; + Product2__r.Name, 
           IF( !ISBLANK(Contract__c), &apos;Contract: &apos; + Contract__r.Contract_Number__c, &apos;&apos;)
        )
     )
  )
)</formula>
    <label>Related Record Name</label>
    <type>Text</type>
</CustomField>