force-app/main/default/objects/Integration_Message__c/fields/Request_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Request_Envelope__c</fullName>
    <label>Request Envelope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>