force-app/main/default/objects/Integration_Message__c/fields/Response_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Response_Envelope__c</fullName>
    <label>Response Envelope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>