force-app/main/default/objects/Integration_Message__c/fields/System_Exception__c.field-meta.xml
<CustomField>
    <fullName>System_Exception__c</fullName>
    <label>System Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>