force-app/main/default/objects/Integration_Message__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Format of this field will be
Failed/ NP and Valid for Retrial - Object type_Record ID_IntegrationStatus
Success and Not Valid for Retrial - Object type_Record ID_IntegrationStatus_Im Number</description>
    <externalId>true</externalId>
    <inlineHelpText>SObject Type_SFDC Record ID_Status_AutoNumber(For Success)</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>