force-app/main/default/objects/Integration_Message__c/fields/Valid_for_Retrial__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Retrial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Valid for Retrial</label>
    <type>Checkbox</type>
</CustomField>