force-app/main/default/objects/Integration_Message__c/fields/Webservice_params__c.field-meta.xml
<CustomField>
    <fullName>Webservice_params__c</fullName>
    <label>Webservice params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>