force-app/main/default/objects/Integration_Message__c/fields/Webservice_Request__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Request__c</fullName>
    <label>Webservice Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FetchCustomerBillingGroups</fullName>
            </value>
            <value>
                <fullName>FetchBillingSOFs</fullName>
            </value>
            <value>
                <fullName>FetchProductSubscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>