force-app/main/default/objects/Integration_Message__c/validationRules/Invalid_For_Retrail.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_For_Retrail</fullName>
    <active>true</active>
    <description>Created By Nandish for Billing Group</description>
    <errorConditionFormula>Valid_for_Retrial__c &amp;&amp; NOT(ISBLANK(TEXT(Webservice_Request__c)))</errorConditionFormula>
    <errorMessage>Webservice Request are invalid targets for retrial</errorMessage>
</ValidationRule>