force-app/main/default/objects/Integration_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contract__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Valid_for_Retrial__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>