force-app/main/default/objects/Integration_Message__c/listViews/Billing_Group_Integration.listView-meta.xml
<ListView>
    <fullName>Billing_Group_Integration</fullName>
    <columns>NAME</columns>
    <columns>Webservice_params__c</columns>
    <columns>Webservice_Request__c</columns>
    <columns>Unique_Key__c</columns>
    <columns>Parent_Template_Name__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Webservice_Request__c</field>
        <operation>equals</operation>
        <value>FetchCustomerBillingGroups,FetchBillingSOFs</value>
    </filters>
    <label>Billing Group Integration</label>
</ListView>